eliminadas líneas de sobra

--- a/css/style.less
+++ b/css/style.less
@@ -18,7 +18,7 @@ body{
 	color:@colortexto;
 	font-family: 'Open Sans', helvetica, arial, sans-serif;
 	.optimizar();
-	line-height:120%;
+	//line-height:120%;
 	h2, h3, h4, h5, h6{
 		opacity: 0.6;
 	}
