--- a/css/lib/variables.less
+++ b/css/lib/variables.less
@@ -21,6 +21,7 @@
 	width:@width;
 	background: url('../images/grid_60x20.png');
 	position:absolute;
+	position: fixed;
 	top:0;
 	left:50%;
 	margin-left:-@width / 2;
@@ -30,6 +31,7 @@
 }
 .viewport{
 	position:absolute;
+	position: fixed;
 	bottom:0;
 	left:0;
 	background: black;
@@ -358,3 +360,38 @@ a:hover {
 	}
 }
 */
+
+.info, .success, .warning, .error, .validation {
+  border: 1px solid;
+  margin: 10px 0px;
+  padding:15px 10px 15px 50px;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+}
+.info {
+  color: #00529B;
+  background-color: #BDE5F8;
+  background-image: url('../images/info.png');
+}
+.success {
+  color: #4F8A10;
+  background-color: #DFF2BF;
+  background-image:url('../images/success.png');
+}
+.warning {
+  color: #9F6000;
+  background-color: #FEEFB3;
+  background-image: url('../images/warning.png');
+}
+.error {
+  color: #D8000C;
+  background-color: #FFBABA;
+  background-image: url('../images/error.png');
+}
+
+.notice {
+  color: #6D6E6E;
+  background-color: #F1F1F1;
+  padding:15px;
+  border:1px solid #CBC4C4;
+}
