--- a/css/lib/variables.less
+++ b/css/lib/variables.less
@@ -395,3 +395,20 @@ a:hover {
   padding:15px;
   border:1px solid #CBC4C4;
 }
+
+.wwrap{
+-ms-word-break: break-all;
+     word-break: break-all;
+
+     // Non standard for webkit
+     word-break: break-word;
+
+-webkit-hyphens: auto;
+   -moz-hyphens: auto;
+        hyphens: auto;
+}
+
+/* ----------------------------------------------------- 
+	HACK PARA MÁRGENES Y PADDING (dante)
+----------------------------------------------------- */
+*, *:before, *:after { -moz-box-sizing: border-box;-webkit-box-sizing: border-box; box-sizing: border-box; } 
