corregido problema al minificar el CSS

--- a/css/style.less
+++ b/css/style.less
@@ -1,5 +1,5 @@
 //@import 'normalize.less';
-@import 'lib/reset.less';
+@import 'lib/normalize.less';
 //@import 'lib/grid.less';
 @import 'lib/variables.less';
 
