replanteada estructura de archivos y agregado condicional js para movil

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: UX
-Theme URI: http://blog.almadark.com/
-Description: Template creado para el blog iDioteca.
+Theme Name: Mincetur
+Theme URI: http://mincetur.gob.pe/
+Description: Template creado para MINCETUR.
 Author: Sergio Huayanay
 Author URI: http://sergio.huayanay.com/
 Version: 1.0
