--- a/less/lib/sh.less
+++ b/less/lib/sh.less
@@ -13,7 +13,7 @@
 ///////////////
 // VARIABLES //
 ///////////////
-@width:940px;
+//@width:940px;
 
 
 .grilla{
@@ -92,29 +92,26 @@
 @concrete2:  background: #a3b1b2;
 @asbestos2:  background: #8c9899;
 
+// FLAT ENDS
 
 
-// FLAT END
+//@colortexto:#3a3a3a;
+//@rojo:@pomegranate;
 
-@colortexto:#3a3a3a;
-@colorfondo:#f3f3f3;
-@colorlinea:#d7d7d7;
-@colorbgris:#eee; //gris claro de fondo
 
-@rojo:#c82a2f;
-@rojo:@pomegranate;
-
-@colorgui:@rojo;
-
+/* ----------------------------------------------------- 
+	TAMAÑO DE TIPOGRAFÍA
+----------------------------------------------------- */
 
 @fontsize: 16px;
-@factor : 3;
+@factor : 2;
 h6{ font-size: @fontsize + @factor * 1; }
 h5{ font-size: @fontsize + @factor * 2; }
 h4{ font-size: @fontsize + @factor * 3; }
 h3{ font-size: @fontsize + @factor * 4; }
 h2{ font-size: @fontsize + @factor * 5; }
 h1{ font-size: @fontsize + @factor * 6; }
+
 
 /* ----------------------------------------------------- 
 	MIXINS
@@ -412,3 +409,38 @@ a:hover {
 	HACK PARA MÁRGENES Y PADDING (dante)
 ----------------------------------------------------- */
 *, *:before, *:after { -moz-box-sizing: border-box;-webkit-box-sizing: border-box; box-sizing: border-box; } 
+
+
+
+/* ----------------------------------------------------- 
+FLEXBOX
+----------------------------------------------------- */
+/*
+.flex{
+	display: flex; // flex | inline-flex
+	
+	//flex-direction: row; // row | row-reverse | column | column-reverse | inherit | initial | unset
+	
+	//justify-content: space-between; // flex-start | flex-end | center | space-between | space-around | inherit | initial | unset
+	
+	//align-items: center; //flex-start | flex-end | center | baseline | stretch
+
+	//flex-direction: row-reverse; //row | row-reverse | column | column-reverse
+
+	//flex-wrap: nowrap; //nowrap | wrap | wrap-reverse
+
+	  display: -webkit-flex;
+   display:         flex;
+   -webkit-flex-flow: row;
+           flex-flow: row;
+}
+
+.flex div{
+	flex: 1 1 auto;
+	width: 30px; 
+}
+
+.flex > div:nth-child(1){ background : #009246; }
+   .flex > div:nth-child(2){ background : #F1F2F1; }
+   .flex > div:nth-child(3){ background : #CE2B37; }
+*/
