--- a/less/style.less
+++ b/less/style.less
@@ -1,389 +1,23 @@
-@import url("reset.less");
+//@import 'normalize.less';
+@import 'lib/reset.less';
+//@import 'lib/grid.less';
+@import 'lib/sh.less';
+
+/* ----------------------------------------------------- 
+	TAMAÑO DE TIPOGRAFÍA
+----------------------------------------------------- */
 /*
-VARIABLES
-*/
-// Colores
-
-@green_d:#468C54; // oscuro
-@green_m:#57AD68; // medio
-@green_l:#63c361; // claro
-
-@blue_d:#2f7bbd; // oscuro
-@blue_m:#55A0C3; // medio
-@blue_l:#E2F1F9; // claro
-
-@silver_l:rgba(0, 0, 0, 0.3);
-
-/*
-Inicio del CSS
-*/
-
-@font-face {
-    font-family: 'freight-text';
-    src: url('fonts/freighttext-book/freighttext-book-webfont.eot');
-    src: url('fonts/freighttext-book/freighttext-book-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/freighttext-book/freighttext-book-webfont.woff') format('woff'),
-         url('fonts/freighttext-book/freighttext-book-webfont.ttf') format('truetype'),
-         url('fonts/freighttext-book/freighttext-book-webfont.svg#freighttext_bookregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-body, p, .entry p{
-	font-family:'freight-text', georgia, 'times new roman', serif;
-	color: rgba(0,0,0,0.7);
-	color:#404040;
-	font-size: 20px;
-	//font-size: 22px;
-	line-height: 1.4em;
-	letter-spacing: 0.01rem;
-	text-rendering: optimizeLegibility;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	-moz-font-feature-settings: "liga" on;
-	color: #585c62; //fifty
-	color:#333230; // reeder
-	background: #e7e6e1; // fifty
-	background: #f3f2ee; //clearly
-	background: #f6f5f2; //reeder
-	background: #fff; // medium
-}
-	h2, h3, h4, h5, h6{
-//opacity: 0.6;
-}
-a{
-	//color:#2F7BBD;
-	color:@green_m;
-	.transicion();
-	&:hover{
-		//color: #2F7BBD;
-		color:@green_d;
-		//color:lighten(@green_d, 15%);
-		text-decoration: underline;
-		//background: none repeat scroll 0% 0% #E2F1F9;
-	}
-}
-
-
-header{
-	margin:20px 0 50px 0;
-	//text-align: center;
-	.logo{
-	}
-}
-.container{
-	main{
-		width:100%;
-		max-width: 750px;
-		overflow: hidden;
-		display: block;
-		.loop{
-			.post{
-				margin-bottom:50px;
-				h1, h2{
-					//font-size:35px; //a
-					//font-family: 'Montserrat', sans-serif; //a
-					font-family: verdana, tahoma, arial, helvetica, sans-serif;
-					//font-weight: 700; //a
-					letter-spacing: -3px;
-					margin: 0 20px 5px 20px;
-					//text-align: center;
-
-					//margin: 0 0 20px 0;
-					letter-spacing: -1px;
-					// font-size: 57px; //a
-					// font-size: 40px; //a
-					font-size: 32px;
-					//font-size: 26px; // ???
-					font-size: 20px;
-					//font-weight:normal; //a
-					font-weight: bold;
-					line-height: 1.1;
-					a{
-						color:#525048;
-						color: rgba(0,0,0,0.8); // medium
-						color:#333230; // reeder
-						text-decoration: none;
-						&:hover{
-							text-decoration: none;
-							background: none;
-							color: rgb(34, 94, 125); // fifty
-						}
-					}
-				}
-				.meta1{
-					margin: 0 20px;
-					font-size:60%;
-					font-family: verdana, tahoma, arial, helvetica, sans-serif;
-					line-height: 150%;
-					color:@silver_l;
-					.cats{
-						text-transform: uppercase;
-						font-weight: bold;
-						a{
-							text-decoration: none;
-							background: none;
-							&:hover{
-								text-decoration: underline;
-								background: none;
-							}
-						}
-					}
-				}
-				.testimado{
-					margin-bottom:20px;
-				}
-				figure{
-					margin: 0 15px 20px 15px;
-					img{
-						width:100%;
-						max-width: 750px;
-						height: auto;
-						//.rounded(5px); //fifty
-					}
-				}
-				.entry{
-					font-size: 22px;
-					p{
-						padding:0 20px;
-						margin-bottom:40px;
-						a{
-							background: none repeat scroll 0% 0% #e2f1f9;
-							.rounded();
-							padding:2px 4px;
-							//text-decoration: none;
-							&:hover{
-								color:white;
-								background: #55a0c3;
-							}
-						}
-						img{
-							width:120%;
-							max-width: 750px;
-							height: auto;
-							margin:10px -20px 0 -20px;
-							//.rounded(5px); //fifty
-						}
-					}
-				}
-				.leermas{
-					margin:0 15px 20px 15px;
-					font-size: 18px;
-				}
-				.btn_comment{
-					margin: 0 20px 40px 20px;
-				}
-				footer{
-					border-top: 3px solid #eee;
-					border-bottom: 3px solid #eee;
-					font-family: verdana, "Helvetica Neue",Helvetica,Arial,sans-serif;
-					width:90%;
-					margin: 20px auto 60px auto;
-					padding: 20px 0;
-					address{
-							font-size: 14px;
-							font-size: 13px;
-							margin:0 0 20px 0;
-							color: rgba(0, 0, 0, 0.3);
-					}
-					.tag-links{
-						margin:0 20px;
-						font-size:16px;
-						font-size: 13px;
-						font-family: verdana;
-						ul{
-							.clearfix();
-							li{
-								float:left; 
-								margin:0px 5px;
-								a{
-									//background:#e2f1f9;
-									background: #eef0f1;
-									color:gray;
-									padding:5px;
-									.rounded(10px);
-									text-decoration: none;
-									&:hover{
-										//color:white;
-										text-decoration: underline;
-										//background: #55a0c3;
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-} // container
-.single .container main .loop .post figure{
-	margin: 0 0 20px 0;
-}
-.single .container main .loop .post h1, .single .container main .loop .post h2 {
-	font-size:26px;
-}
-
-
-.button {
-    display: inline-block;
-    position: relative;
-    height: 38px;
-    padding: 0px 16px;
-    outline: 0px none;
-    color: rgba(0, 0, 0, 0.44);
-    background: none repeat scroll 0% 0% transparent;
-    font-size: 14px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    border: 1px solid rgba(0, 0, 0, 0.15);
-    vertical-align: bottom;
-    white-space: nowrap;
-    -moz-user-select: none;
-    box-sizing: border-box;
-    border-radius: 999em;
-    transition: background-color 100ms ease 0s, border-color 100ms ease 0s, color 100ms ease 0s;
-    font-family: "jaf-bernino-sans","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-serif;
-    letter-spacing: -0.02em;
-    font-weight: 400;
-    font-style: normal;
-    text-rendering: optimizelegibility;
-    -moz-osx-font-smoothing: grayscale;
-    font-feature-settings: "liga";
-    line-height: 37px;
-    &:hover{
-		border:1px solid @green_m;
-		text-decoration: none;
-    }
-}
-
-
-/*
-RESPONSIVE
-*/
-//font-size: 22px;
-//line-height: 1.6em;
-//letter-spacing: 0.01rem;
-@media (min-width: 751px) {
-	img{
-		.rounded(5px); //fifty
-	}
-}
-
-::selection {
-background: #55a0c3; /* WebKit/Blink Browsers */
-}
-::-moz-selection {
-background: #55a0c3; /* Gecko Browsers */
-}
-
-
-.viewport{
-position:absolute;
-position: fixed;
-bottom:0;
-left:0;
-background: black;
-color:white;
-font-size: 12px;
-line-height: 1;
-padding:3px;
-}
-
 @fontsize: 16px;
-@factor : 3;
+@factor : 2;
 h6{ font-size: @fontsize + @factor * 1; }
 h5{ font-size: @fontsize + @factor * 2; }
 h4{ font-size: @fontsize + @factor * 3; }
 h3{ font-size: @fontsize + @factor * 4; }
 h2{ font-size: @fontsize + @factor * 5; }
 h1{ font-size: @fontsize + @factor * 6; }
+*/
 
-// The micro clearfix http://nicolasgallagher.com/micro-clearfix-hack/
-.clearfix() {
-*zoom:1;
-&:before,
-&:after {
-content:"";
-display:table;
-}
-&:after {
-clear:both;
-}
-}
-.cover(){
-//background: black url('../images/bg02.jpg') no-repeat center;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-//background-attachment: fixed;
-background-position: center;
-background-repeat: no-repeat;
-}
-.coverf(){
-//background: black url('../images/bg02.jpg') no-repeat center;
--webkit-background-size: cover;
--moz-background-size: cover;
--o-background-size: cover;
-background-size: cover;
-background-attachment: fixed;
-}
-.rounded(@radius: 5px) {
--webkit-border-radius: @radius;
--moz-border-radius: @radius;
-border-radius: @radius;
-}
-.shadow(){
-text-shadow: 0px 0px 7px rgba(76, 67, 71, 1);
-}
-.boxshadow(){
-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.05);
-}
-.boxshadowh(){
-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.2);
-}
-.translate(){
-transform: translateY(-5px);
-}
+/* ----------------------------------------------------- 
+	LAYOUT
+----------------------------------------------------- */
 
-.crecer(){
--webkit-transition:all 300ms linear;
--moz-transition:all 300ms linear;
--o-transition:all 300ms linear;
--ms-transition:all 300ms linear;
-transition:all 300ms linear;
-&:hover{
--moz-transform: scale(1.2);
--webkit-transform: scale(1.2);
--o-transform: scale(1.2);
-transform: scale(1.2);
-}
-}
-.circular(){
--webkit-border-radius: 50%;
--moz-border-radius: 50%;
-border-radius: 50%;
-}
-.optimizar(){
--webkit-font-smoothing: subpixel-antialiased;
-text-rendering: optimizeLegibility;
-}
-.transicion(){
--webkit-transition: 0.25s linear;
-transition: 0.25s linear;
-}
-.linksn(){
-						a{
-							background:rgba(0,0,0,0.1);
-							text-decoration:none;
-							padding: 2px 4px;
-							.rounded(2px);
-							&:hover{
-								background: rgba(0,0,0,0.4);
-								color:white;
-							}
-						}
-}
