--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,7 @@
 //@import 'normalize.less';
-@import 'lib/reset.less';
+//@import 'lib/reset.less';
 //@import 'lib/grid.less';
-@import 'lib/sh.less';
+//@import 'lib/sh.less';
 
 /* ----------------------------------------------------- 
 	TAMAÑO DE TIPOGRAFÍA
@@ -21,3 +21,4 @@ h1{ font-size: @fontsize + @factor * 6; }
 	LAYOUT
 ----------------------------------------------------- */
 
+body{background: red;}
