--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name: Mincetur
-Theme URI: http://mincetur.gob.pe/
-Description: Template creado para MINCETUR.
+Theme Name: Nombre del tema
+Theme URI: http://sergio.huayanay.com/
+Description: Template creado para ...
 Author: Sergio Huayanay
 Author URI: http://sergio.huayanay.com/
 Version: 1.0
