DEV color de fondo para validar si carga el script

--- a/less/style.less
+++ b/less/style.less
@@ -1,12 +1,12 @@
 //@import 'normalize.less';
-//@import 'lib/reset.less';
+@import 'lib/reset.less';
 //@import 'lib/grid.less';
 //@import 'lib/sh.less';
 
 /* ----------------------------------------------------- 
 	TAMAÑO DE TIPOGRAFÍA
 ----------------------------------------------------- */
-/*
+
 @fontsize: 16px;
 @factor : 2;
 h6{ font-size: @fontsize + @factor * 1; }
@@ -15,10 +15,10 @@ h4{ font-size: @fontsize + @factor * 3; }
 h3{ font-size: @fontsize + @factor * 4; }
 h2{ font-size: @fontsize + @factor * 5; }
 h1{ font-size: @fontsize + @factor * 6; }
-*/
+
 
 /* ----------------------------------------------------- 
 	LAYOUT
 ----------------------------------------------------- */
 
-body{background: red;}
+body{background: silver;}
